March 2014 4.5
  - IMAP: allow dynamic admin user names by replacing wildcards with LDAP attributes
  - Personal: allow to set fields read-only

18.12.2013 4.4
  - PyKota support: users, groups, printers, billing codes
  - Kolab shared folder support
  - New tool "Multi edit" allows LDAP operations on a large number of entries (e.g. adding attributes)
  - Allow to set a custom label for each account type
  - Unix: switch also additional membership if primary group is changed (RFE 108)
  - Windows: fixed user name handling, sAMAccountName now optional
  - Apache 2.4 support (requires Apache "version" module)
  - added Turkish, Ukrainian and US English translation
  - LAM Pro:
   -> Bind DLZ support
   -> Samba/Shadow: display password change date in self service
   -> Custom fields: support custom label and icon, auto-completion
   -> User self registration: support constant attribute values
   -> Self service: allow to set custom field labels
  - fixed bugs:
   -> Format of photo in Personal tab (158)


25.09.2013 4.3
  - Custom SSL CA certificates can be setup in LAM main configuration
  - Unix user and group support for Samba 4
  - Samba 3 groups: support local members
  - Kolab: support group accounts and allowed senders/receivers for users
  - SSH public key: support file upload and self service enhancements (RFE 101)
  - DHCP: support more options (RFE 99)
  - LAM Pro:
   -> PPolicy: check password history for password reuse
   -> Custom fields: read-only fields for admin interface and file upload for binary data
   -> Custom scripts: support user self registration
   -> Password self reset: Samba 3 sync, identification with login attribute, Samba 4 support
  - fixed bugs:
   -> Custom fields: auto-adding object classes via profile editor fixed
   -> PHP 5.5 compatibility
   -> Lamdaemon: do not show message if home directory to delete was not found (154)


18.06.2013 4.2.1
  - fixed bugs:
   -> Unix: suggested user name must be lower case