@@ -1,6 +1,7 @@
 March 2014 4.5
   - IMAP: allow dynamic admin user names by replacing wildcards with LDAP attributes
   - Personal: allow to set fields read-only
+  - Added option to server profile if referrals should be followed (fixes problems with Samba 4 and AD)
 
 18.12.2013 4.4
   - PyKota support: users, groups, printers, billing codes
